# sae-stage-template

./: .gitignore  Dockerfile  Makefile  README.md  docker_build.sh  pyproject.toml  set_name.sh  settings.template.yaml  settings.yaml
.github/workflows/: build-publish-latest.yaml  create-release.yaml  pr_build.yaml
mystage/: config.py  mystage.py  stage.py
tests/: conftest.py  test_config.py  test_imports.py  test_stage.py
